@@ -20,7 +20,7 @@
 \
 \ ==============================================================================
 \ 
-\  $Date: 2005-12-24 08:38:48 $ $Revision: 1.2 $
+\  $Date: 2005-12-30 20:36:27 $ $Revision: 1.3 $
 \
 \ ==============================================================================
 
@@ -31,6 +31,7 @@ include ffl/scn.fs
 include ffl/scl.fs
 include ffl/sci.fs
 include ffl/str.fs
+include ffl/tis.fs
 
 \ ==============================================================================
 
